--- a/practice/api.html
+++ b/practice/api.html
@@ -39,7 +39,7 @@
     
     
 
-    const requestUrl='https://api.github.com/users/sumitkumar0403';
+    const requestUrl='https://api.github.com/users/hiteshchoudhary';
     const xhr=new XMLHttpRequest()
     xhr.open("GET",requestUrl);
 
@@ -76,7 +76,7 @@
     function displayFollowers(followers){
         const p =document.createElement('p')
         p.style.color="white";
-        p.innerHTML=Followers = ${followers};
+        p.innerHTML=`Followers = ${followers}`;
         infoDiv.appendChild(p)
     }
 </script>
