--- a/project/project_04.html
+++ b/project/project_04.html
@@ -9,7 +9,6 @@
         html {
             font-family: sans-serif;
         }
-
         body {
             width: 300px;
             max-width: 750px;
@@ -17,29 +16,29 @@
             margin: 0 auto;
             background-color: #212121;
         }
-
         .lastResult {
             color: white;
             padding: 7px;
         }
-
         .guesses {
             color: white;
             padding: 7px;
         }
-
-        button {
+        #button {
             background-color: #141414;
             color: #fff;
-            width: 250px;
-            height: 50px;
-            border-radius: 25px;
-            font-size: 30px;
+            width: 200px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 8px;
+            font-size: 24px;
             border-style: none;
             margin-top: 30px;
-            /* margin-left: 50px; */
+            margin-left: 8.2rem;
+            cursor: pointer;
         }
-
         #subt {
             background-color: #161616;
             color: #ffffff;
@@ -49,9 +48,9 @@
             font-size: 20px;
             border-style: none;
             margin-top: 50px;
+            cursor: pointer;
             /* margin-left: 75px; */
         }
-
         #guessField {
             color: #000;
             width: 250px;
@@ -59,23 +58,19 @@
             font-size: 30px;
             border-style: none;
             margin-top: 25px;
-
             /* margin-left: 50px; */
             border: 5px solid #6c6d6d;
             text-align: center;
         }
-
         #guess {
             font-size: 50px;
             /* margin-left: 90px; */
             margin-top: 120px;
             color: #fff;
         }
-
         .guesses {
-            background-color: #7a7a7a;
+            background-color: #474747;
         }
-
         #wrapper {
             box-sizing: border-box;
             text-align: center;
@@ -85,7 +80,9 @@
             color: #fff;
             font-size: 25px;
         }
-
+        .resultParas{
+            font-size: 30px;
+        }
         h1 {
             background-color: #161616;
             color: #fff;
@@ -122,4 +119,94 @@
     </div>
    
 </body>
+<script>
+
+    let randomNumber = parseInt(Math.random() * 100 + 1);
+
+    const userInput = document.querySelector('#guessField');
+    const submit = document.querySelector('#subt');
+    const prevGuess = document.querySelector('.guesses');
+    const remaining = document.querySelector('.lastResult');
+    const lowOrHi = document.querySelector('.lowOrHi');
+    const result = document.querySelector('.resultParas');
+
+    let playGame = true;
+    let numGuess = 1;
+    let total_prevGuess = [];
+
+    const p = document.createElement('p');
+
+    if(playGame){
+        submit.addEventListener('click', (e)=>{
+            e.preventDefault();
+            const guess = parseInt(userInput.value);
+            console.log(guess);
+            validateGame(guess);
+
+        })
+    }
+
+    function validateGame(guess) {
+        if(guess === '' || guess < 0 || guess > 100 || isNaN(guess)){
+            // console.log(`Please enter a valid number`);
+            result.innerHTML = `Please enter a valid number`
+        }else{
+            total_prevGuess.push(guess);
+            if(numGuess === 10){
+                displayGuess(guess);
+                displayMessage(`Game is Over, Correct answer is ${randomNumber}`);
+                endGame(guess);
+            }else{
+                displayGuess(guess);
+                startGame(guess);
+            }
+        }
+    }
+
+    function startGame(guess) {
+        if(guess === randomNumber){
+            displayMessage(`You guessed it right`);
+            endGame(guess);
+        }else if(guess > randomNumber || guess < randomNumber){
+            displayMessage(`Incorrect answer`);
+        }
+    }
+
+    function displayGuess(guess) {
+        userInput.value = '';           //cleaning the previous input
+        prevGuess.innerHTML += `${guess}, `;    //valuse shown on previous guess option
+        remaining.innerHTML = `${10 - numGuess}`
+        numGuess++;
+    }
+
+    function displayMessage(message) {
+        lowOrHi.innerHTML = `<h2>${message}</h2>`
+    }
+
+    function endGame(guess) {
+        userInput.value = '';
+        userInput.setAttribute('disabled','');
+        p.classList.add('button');
+        p.innerHTML = `<h2 id="button">Start again</h2>`;
+        result.appendChild(p);
+        playGame = false;
+        startOver()
+    }
+
+    function startOver(guess) {
+        const startBtn = document.querySelector('#button');
+        startBtn.addEventListener('click', (e)=>{
+            total_prevGuess = [];
+            randomNumber = parseInt(Math.random() * 100 + 1);
+            numGuess = 1;
+            prevGuess.innerHTML = '';
+            remaining.innerHTML = `${10 - numGuess}`
+            userInput.removeAttribute('disabled');
+            result.removeChild(p)
+
+            playGame = true;
+        })
+    }
+
+</script>
 </html>
